# mifx-musicmap

./: .gitignore  README.md  pyproject.toml
conf/base/: catalog.yml
data/02_intermediate/: processed_musicmap_bot_users.csv  user_clustering.csv
data/06_models/: model.pkl
data/07_model_output/: card_df.csv
data/08_reporting/: chi_square_test.csv  mann_whitney_u_test.csv  performance_summary.json
notebooks/: eda.ipynb  raw_sample.csv
src/mifx_musicmap/: __init__.py  __main__.py
src/mifx_musicmap/pipelines/data_preprocessing/: nodes.py  pipeline.py
src/mifx_musicmap/pipelines/data_reporting/: nodes.py  pipeline.py
src/mifx_musicmap/pipelines/data_science/: nodes.py  pipeline.py
